tests/NormalTests/paczka1/fuzzy1/32231737.err
Error in line 6: 4HoHmcJkdf1 S73 61,2
Error in line 15: A578 A18 8,5
Error in line 17: A578 A578 83,4
Error in line 9: sn3qKCnhCQ A578 155,3
Error in line 26: KqcQFX A578 257,65
Error in line 24: 4HoHmcJkdf1 A578 55,3
Error in line 31: 4HoHmcJkdf1 A18 55,6
Error in line 30: KqcQFX A578 19,0
Error in line 33: KqcQFX A970 65,9
